force-app/main/default/objects/Product_Territory_Alignment__c/Product_Territory_Alignment__c.object-meta.xml
<CustomObject>
    <label>Product Territory Alignment</label>
    <nameField>
        <displayFormat>PTA-{00000}</displayFormat>
        <label>Product Territory Alignment Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Product Territory Alignments</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>