force-app/main/default/objects/Product_Territory_Alignment__c/fields/Effective_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Effective_End_Date__c</fullName>
    <description>End date for product alignment in the territory.</description>
    <label>Effective End Date</label>
    <type>Date</type>
</CustomField>