force-app/main/default/objects/Product_Territory_Alignment__c/fields/Effective_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Effective_Start_Date__c</fullName>
    <description>Start date for product alignment in the territory.</description>
    <label>Effective Start Date</label>
    <type>Date</type>
</CustomField>